# Quick-Preview-in-FreeCAD

./: .gitignore  CMakeLists.txt  Init.py  InitGui.py  QuickPreview.dox  README.md
App/: AppQuickPreview.cpp  CMakeLists.txt  PreCompiled.h
Gui/: AppQuickPreviewGui.cpp  CMakeLists.txt  Command.cpp  PreCompiled.h  Workbench.cpp  Workbench.h
